solved overflow of x-axis

--- a/acer.css
+++ b/acer.css
@@ -1,6 +1,10 @@
 *{
     padding:0;
     margin:0;
+
+}
+body {
+  overflow-x: hidden; /* Hides horizontal overflow */
 }
 .main-container{
     width:100%;
